--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ h3 {
         
          <p>I am an international student at Bob Jones University studying Biblical Counseling. I hope to use my major in ministry at a youth camp in Germany, my home country.</p>
          <p>
-            I love to work on physical projects at the youth camp in Germany (building anything from fire code safe paths to remodeling interiors. I enjoy working with children and teens to help them understand the truly important parts of life. 
+            I love to work on physical projects at the youth camp in Germany (building anything from fire code safe paths to remodeling interiors). I enjoy working with children and teens to help them understand how to have a true and growing relationship with Christ. 
          </p> 
          <p>
             I also enjoy Soccer, Volleyball, Pickleball, and any other athletic endeavor.
